package gui;

import dao.DaoExceptionMapper;
import dao.ProductDAO;
import javax.swing.JOptionPane;

/**
 *
 * @author liamflynn
 */
public class MainMenu extends javax.swing.JFrame {
    private final ProductDAO proDAO;

    /**
     * Creates new form MainMenu
     */
    public MainMenu(ProductDAO productDAO) {
        initComponents();
        proDAO = productDAO;
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        buttNewPro = new javax.swing.JButton();
        buttViewPro = new javax.swing.JButton();
        buttExit = new javax.swing.JButton();

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);

        buttNewPro.setText("Add a New Product");
        buttNewPro.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                buttNewProActionPerformed(evt);
            }
        });

        buttViewPro.setText("View Products");
        buttViewPro.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                buttViewProActionPerformed(evt);
            }
        });

        buttExit.setText("Exit");
        buttExit.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                buttExitActionPerformed(evt);
            }
        });

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
        getContentPane().setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addContainerGap()
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addComponent(buttNewPro, javax.swing.GroupLayout.DEFAULT_SIZE, 388, Short.MAX_VALUE)
                    .addComponent(buttViewPro, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                    .addComponent(buttExit, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
                .addContainerGap())
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addContainerGap()
                .addComponent(buttNewPro)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addComponent(buttViewPro)
                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                .addComponent(buttExit)
                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
        );

        pack();
    }// </editor-fold>//GEN-END:initComponents

    private void buttNewProActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_buttNewProActionPerformed
        try {
            ProductEditor proDialog = new ProductEditor(this, true, proDAO);
            proDialog.setLocationRelativeTo(this);
            proDialog.setVisible(true);
        } catch (Exception ex) {
            JOptionPane.showMessageDialog(this,
                    new DaoExceptionMapper().messageFromException(ex),
                    "Database Error", JOptionPane.ERROR_MESSAGE);
        }
    }//GEN-LAST:event_buttNewProActionPerformed

    private void buttExitActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_buttExitActionPerformed
        System.exit(0);
    }//GEN-LAST:event_buttExitActionPerformed

    private void buttViewProActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_buttViewProActionPerformed
        try {
            ProductViewer proViewer = new ProductViewer(this, true, proDAO);
            proViewer.setLocationRelativeTo(this);
            proViewer.setVisible(true);
        } catch (Exception ex) {
            JOptionPane.showMessageDialog(this,
                    new DaoExceptionMapper().messageFromException(ex),
                    "Database Error", JOptionPane.ERROR_MESSAGE);
        }
    }//GEN-LAST:event_buttViewProActionPerformed

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton buttExit;
    private javax.swing.JButton buttNewPro;
    private javax.swing.JButton buttViewPro;
    // End of variables declaration//GEN-END:variables

}
